# ptmcmcsampler-bilby

./: CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/ptmcmcsampler_bilby/: __init__.py  sampler.py
tests/: test_bilby_integration.py  test_sampler_class.py
